--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                                 id="query-input" 
                                 rows="1"
                                 placeholder="Ask anything about Islam..."
-                                data-initial-placeholder="Ask anything..."
+                                data-initial-placeholder="Ask anything about Islam..."
                                 data-followup-placeholder="Ask follow-up..."
                             ></textarea>
                         </div>
