--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="style.css">
 
     <!-- Preconnect to backend -->
-    <link rel="preconnect" href="https://perspicacitybackend.onrender.com">
-    <link rel="dns-prefetch" href="https://perspicacitybackend.onrender.com">
+    <link rel="preconnect" href="https://perspicacity.onrender.com">
+    <link rel="dns-prefetch" href="https://perspicacity.onrender.com">
 
     <!-- Preload critical resources -->
     <link rel="preload" href="style.css" as="style">
@@ -67,15 +67,6 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <div class="setting-group">
-                    <label>Support This Project</label>
-                    <p style="font-size: 14px; color: var(--text-secondary); margin-bottom: 12px;">
-                        Perspicacity is free to use. Your support helps cover server costs and keeps this project running.
-                    </p>
-                    <a href="YOUR_STRIPE_PAYMENT_LINK" class="donate-link-modal" target="_blank" rel="noopener noreferrer">
-                        Donate via Stripe
-                    </a>
-                </div>
                 <button class="btn-primary" id="save-settings">Save Settings</button>
             </div>
         </div>
@@ -96,12 +87,6 @@
                 </svg>
                 <h1>Perspicacity</h1>
             </div>
-            <a href="YOUR_STRIPE_PAYMENT_LINK" class="donate-btn" target="_blank" rel="noopener noreferrer">
-                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path>
-                </svg>
-                <span>Support</span>
-            </a>
             <button class="settings-btn" id="open-settings">
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <path d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"></path>
