--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="zNI11DBPyGk9TK9a4nV-JVXqqZ388RExiveBpD5t2FI" />
     <title>Perspicacity - Islamic AI Research Assistant</title>
-    <link rel="icon" type="image/png" sizes="48x48" href="/icons/favicon-48.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/icons/favicon-96.png">
-    <link rel="icon" type="image/svg+xml" href="/icons/favicon.svg">
-    <link rel="manifest" href="manifest.json">
-    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="/assets/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
+    <link rel="shortcut icon" href="/assets/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Perspicacity" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="stylesheet" href="/style.css">
 
     <!-- Preconnect to backend -->
     <link rel="preconnect" href="https://perspicacity.onrender.com">
@@ -42,8 +44,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Perspicacity">
-    <link rel="apple-touch-icon" href="/icons/icon-192.png">
-    
+
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
 <body>
@@ -198,6 +199,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
