--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
     <link rel="shortcut icon" href="/assets/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png" />
-    <link rel="manifest" href="/site.webmanifest" />
-    <link rel="stylesheet" href="/style.css">
+    <link rel="manifest" href="site.webmanifest" />
+    <link rel="stylesheet" href="style.css">
 
     <!-- Preconnect to backend -->
     <link rel="preconnect" href="https://perspicacity.onrender.com">
@@ -199,6 +199,6 @@
         </div>
     </div>
 
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
