--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="apple-mobile-web-app-title" content="Perspicacity" />
     <meta name="google-site-verification" content="zNI11DBPyGk9TK9a4nV-JVXqqZ388RExiveBpD5t2FI" />
     <title>Perspicacity - Islamic AI Research Assistant</title>
-    <link rel="icon" type="image/png" href="/assets/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
-    <link rel="shortcut icon" href="/assets/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" href="assets/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="assets/favicon.svg" />
+    <link rel="shortcut icon" href="assets/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png" />
     <link rel="manifest" href="site.webmanifest" />
     <link rel="stylesheet" href="style.css">
 
