--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <link rel="dns-prefetch" href="https://perspicacity.onrender.com">
 
     <!-- Preload critical resources -->
-    <link rel="preload" href="/style.css" as="style">
-    <link rel="preload" href="/script.js" as="script">
+    <link rel="preload" href="style.css" as="style">
+    <link rel="preload" href="script.js" as="script">
     
     <!-- SEO Meta Tags -->
     <meta name="description" content="Perspicacity is an AI-powered Islamic research assistant that provides sourced answers from IslamQA.info and IslamWeb.net. Ask questions and get reliable Islamic guidance.">
