--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/svg+xml" href="assets/favicon.svg" />
     <link rel="shortcut icon" href="assets/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png" />
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="site.webmanifest" />
     <link rel="stylesheet" href="style.css">
 
     <!-- Preconnect to backend -->
